complete #K33 @0h20m Rifattorizzato il codice per rimuovere l'uso del metodo deprecato newInstance().